fix: body overflow

--- a/packages/command-cabin/src/assets/css/style.scss
+++ b/packages/command-cabin/src/assets/css/style.scss
@@ -28,6 +28,7 @@ html {
 body {
   font-size: 24px;
   background-color: #000;
+  overflow: hidden;
 }
 // 微信长按hotfix
 .wx-callout {
